# antibody_training_pipeline_ESM

./: .dockerignore  .gitignore  .mypy_failures.txt  .pre-commit-config.yaml  AGENTS.md  AUDIT_DATASETS.json  BOUGHTER_ADDITIONAL_QC_PLAN.md  BOUGHTER_NOVO_REPLICATION_ANALYSIS.md  BOUGHTER_PREPROCESSING_REORGANIZATION_PLAN.md  CHANGELOG.md  CHERRY_PICK_PLAN.md  CICD_SPEC.md  CITATIONS.md  CLAUDE.md  CODEBASE_AUDIT_VS_NOVO.md  CODEBASE_REORGANIZATION_PLAN.md  CODEQL_FINDINGS.md  CODE_OF_CONDUCT.md  COLUMN_NAMING_FIX_PLAN.md  CONTRIBUTING.md  CRITICAL_BLOCKERS_AUDIT.md  CRITICAL_BUGS_FIXED.md  CURRENT_STRUCTURE.txt  DATASETS_FINAL_SUMMARY.md  DIRECTORY_CLEANUP_AUDIT.md  DIRECTORY_STRUCTURE_PROPOSAL.md  DOCKER_CI_FAILURE_ANALYSIS.md  Dockerfile.dev  Dockerfile.prod  ESM1V_ENSEMBLING_INVESTIGATION.md  ESM2_FEATURE.md  FINAL_RESOLUTION_AND_PATH_FORWARD.md  FINAL_RESULTS.md  GINKGO_2025_IMPROVEMENT_ROADMAP.md  GINKGO_ITERATIVE_IMPROVEMENT_PLAN.md  GINKGO_RESULTS_SUMMARY.md  GINKGO_STRATEGY.md  HARVEY_CLEANUP_INVESTIGATION.md  HARVEY_CLEANUP_VERIFICATION.md  HYPERPARAMETER_SWEEP_ARCHIVE_PLAN.md  (+96 more)
.backup_old_jain_files/: VH_only_jain.csv
.github/workflows/: benchmark.yml  ci.yml  codeql.yml  dependencies.yml  docker-ci.yml
analysis/archive/: novo_qc_length3.csv  novo_qc_removed8.csv  novo_reclassifications.csv  novo_removed_before_94.csv
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
combined_datasets/: README.md  boughter_ginkgo_combined.csv  boughter_training.csv  ginkgo_labeled.csv
configs/: config.yaml  config_legacy.yaml  config_strict_qc.yaml
data/train/: README.md
docs/: ASSAY_SPECIFIC_THRESHOLDS.md  BENCHMARK_TEST_RESULTS.md  BOUGHTER_DATASET_COMPLETE_HISTORY.md  BRANCH_PROTECTION_WALKTHROUGH.md  CLEANUP_COMPLETE_SUMMARY.md  CODEBASE_AUDIT_VS_NOVO.md  CODEBASE_REORGANIZATION_PLAN.md  COMPLETE_VALIDATION_RESULTS.md  DOCKER_DEPLOYMENT.md  DOCKER_USAGE.md  DOCUMENTATION_STRUCTURE_PLAN.md  ESM1V_ENSEMBLING_INVESTIGATION.md  FIXES_APPLIED.md  JAIN_REPLICATION_PLAN.md  METHODOLOGY_AND_DIVERGENCES.md  MPS_MEMORY_LEAK_FIX.md  NOVO_ALIGNMENT_COMPLETE.md  NOVO_PARITY_ANALYSIS.md  NOVO_TRAINING_METHODOLOGY.md  PRODUCTION_MODEL_SERIALIZATION.md  README.md  REPOSITORY_MODERNIZATION_PLAN.md  RESIDUAL_TYPE_ERRORS.md  SCRIPTS_AUDIT.md  STRICT_QC_CLEANUP_PLAN.md  TEST_DATASETS_REORGANIZATION_PLAN.md  TEST_SUITE_PLAN.md  TRAINING_SETUP_STATUS.md  accuracy_verification_report.md  bandit_report.json  boughter_cdr_boundary_investigation.md  boughter_data_sources.md  boughter_processing_implementation.md  boughter_processing_status.md  cdr_boundary_first_principles_audit.md  excel_to_csv_conversion_methods.md  harvey_data_cleaning_log.md  harvey_data_sources.md  harvey_preprocessing_implementation_plan.md  harvey_script_audit_request.md  (+7 more)
docs/archive/: 2025-11-11-production-readiness-audit.md  CLEANUP_COMPLETE_SUMMARY.md  CLEANUP_PLAN.md  CODEBASE_REORGANIZATION_PLAN.md  DOCS_AUDIT_STATUS.md  P0_SEMAPHORE_LEAK.md  PHASE1_TEST_RESULTS.md  README.md  SCRIPTS_AUDIT.md  STRICT_QC_CLEANUP_PLAN.md  TEST_DATASETS_REORGANIZATION_PLAN.md  TRAINING_SETUP_STATUS.md
docs/boughter/: BOUGHTER_ADDITIONAL_QC_PLAN.md  BOUGHTER_DATASET_COMPLETE_HISTORY.md  BOUGHTER_NOVO_METHODOLOGY_CLARIFICATION.md  BOUGHTER_NOVO_REPLICATION_ANALYSIS.md  BOUGHTER_P0_FIX_REPORT.md  README.md  accuracy_verification_report.md  boughter_cdr_boundary_investigation.md  (+5 more)
experiment_results/: boughter_transfer_results.csv
experiments/: README.md
hyperparameter_sweep_results/: best_config_20251102_182542.yaml  final_sweep_results_20251102_182542.csv  sweep_results_20251102_170458.csv  sweep_results_20251102_170459.csv  sweep_results_20251102_170504.csv  sweep_results_20251102_170510.csv  sweep_results_20251102_182523.csv  sweep_results_20251102_182524.csv  sweep_results_20251102_182526.csv
models/: boughter_vh_esm1v_logreg.pkl  boughter_vh_esm2_650m_logreg.pkl
preprocessing/: README.md  __init__.py  preprocess_jain_p5e_s2.py  process_boughter.py  process_harvey.py  process_jain.py  process_jain_OLD_94to86.py.bak  process_shehata.py  validate_boughter.py
scripts/: alpha_sweep_vh_vl.py  alpha_sweep_vh_vl.sh  convert_boughter_to_csv.py  convert_harvey_csvs.py  convert_harvey_to_csv.py  convert_jain_excel_to_csv.py  convert_shehata_excel_to_csv.py  download_harvey_dataset.py  generate_catboost_submission.py  generate_elasticnet_submission.py  generate_ensemble_submission.py  generate_lightgbm_aggressive.py  generate_lightgbm_submission.py  generate_optimal_submission.py  generate_xgboost_submission.py  ginkgo_boughter_transfer.py  ginkgo_boughter_transfer_learning.py  ginkgo_rapid_experiments.py  ginkgo_top3_experiments.py  migrate_model_directories.py  migrate_test_datasets_to_data_test.sh  migrate_train_datasets_to_data_train.sh  prepare_combined_datasets.py  regenerate_piggen_cache.py  rethreshold_harvey.py  run_better_heads_experiments.sh  run_boughter_transfer_tmux.sh  run_fixed_training.sh  run_harvey_test_tmux.sh  tessier_gdpa1_transfer_learning.py  test_assay_specific_thresholds.py  test_harvey_only.py  test_novo_benchmarks.py  train_ginkgo_competition.py  train_ginkgo_elasticnet.py  train_ginkgo_full_features.py  train_ginkgo_mlp.py  train_ginkgo_no_pca.py  train_ginkgo_piggen.py  train_ginkgo_vh_vl_concat.py  (+7 more)
test_datasets/: Public-jain-pnas-NO-ELISA-indiv.csv  boughter.csv  harvey.csv  jain.csv  jain_86_elisa_1.3.csv  jain_ELISA_ONLY_116.csv  jain_filtered_flag3.csv  jain_flags_disaggregated.csv  jain_sd02.csv  jain_with_private_elisa_FULL.csv  jain_with_private_elisa_TEST.csv  mmc3.xlsx  mmc4.xlsx  mmc5.xlsx
test_results/: TEST_RESULTS_SUMMARY.md  detailed_results_boughter_vh_esm2_650m_logreg_VH_only_jain_test_PARITY_86_20251111_234936.yaml
tests/: conftest.py  test_boughter_embedding_compatibility.py  test_harvey_embedding_compatibility.py  test_jain_embedding_compatibility.py  test_shehata_embedding_compatibility.py
train_datasets/: BOUGHTER_DATA_PROVENANCE.md  README.md
(+642 files in other folders)
