[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "antibody-dev-esm"
version = "1.0.0"
description = "Antibody developability analysis using ESM protein language model"
requires-python = ">=3.12"
dependencies = [
    "biopython>=1.80",
    "datasets>=4.2.0",
    "jupyterlab>=4.4.9",
    "matplotlib>=3.7.0",
    "more-itertools",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "plotly",
    "pyparsing>=3.0.0",
    "PyYAML>=6.0.0",
    "riot_na",
    "scikit-learn>=1.3.0",
    "scipy>=1.10.0",
    "seaborn>=0.12.0",
    "torch>=2.6.0",
    "tqdm>=4.65.0",
    "transformers>=4.30.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.6.0",
    "pytest-sugar>=1.0.0",

    # Linting & Formatting
    "ruff>=0.8.0",

    # Type Checking
    "mypy>=1.13.0",
    "pandas-stubs>=2.2.0",

    # Security
    "bandit[toml]>=1.7.0",

    # Pre-commit
    "pre-commit>=4.0.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*" = ["ARG"]
"experiments/**/*" = ["ALL"]
"reference_repos/**/*" = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    "experiments/",
    "reference_repos/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=.",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-fail-under=70",
    "-v",
    "-ra",
]

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "experiments/*",
    "reference_repos/*",
    "**/__pycache__/*",
    ".venv/*",
]

[tool.coverage.report]
precision = 2
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
