[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/antibody_training_esm"]
include = [
    "src/antibody_training_esm/conf/**/*.yaml",
    "src/antibody_training_esm/conf/**/*.py",
]

[tool.hatch.build.targets.sdist]
# Source distribution must include all source files + configs
include = [
    "src/antibody_training_esm/**/*.py",
    "src/antibody_training_esm/conf/**/*.yaml",
    "tests/**/*.py",
    "README.md",
    "pyproject.toml",
    "LICENSE",
]

[project]
name = "antibody-training-esm"
version = "0.4.0"
description = "Professional antibody training pipeline using ESM protein language models"
license = {text = "Apache-2.0"}
requires-python = ">=3.12"
dependencies = [
    "authlib>=1.6.5",
    "biopython>=1.80",
    "brotli>=1.2.0",
    "datasets>=4.2.0",
    "h2>=4.3.0",
    "hydra-core>=1.3.2",
    "jupyterlab>=4.4.9",
    "matplotlib>=3.7.0",
    "more-itertools",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "plotly",
    "pyparsing>=3.0.0",
    "PyYAML>=6.0.0",
    "riot_na",
    "scikit-learn>=1.3.0",
    "scipy>=1.10.0",
    "seaborn>=0.12.0",
    "torch>=2.6.0",
    "tqdm>=4.65.0",
    "transformers>=4.30.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.6.0",
    "pytest-sugar>=1.0.0",

    # Linting & Formatting
    "ruff>=0.8.0",

    # Type Checking
    "mypy>=1.13.0",
    "pandas-stubs>=2.2.0",

    # Security
    "bandit[toml]>=1.7.0",

    # Pre-commit
    "pre-commit>=4.0.0",
]

[project.scripts]
# Point directly to Hydra-decorated function to enable config group overrides
# (antibody-train model=esm2_650m classifier=xgboost now works correctly)
antibody-train = "antibody_training_esm.core.trainer:main"
antibody-test = "antibody_training_esm.cli.test:main"
antibody-preprocess = "antibody_training_esm.cli.preprocess:main"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*" = ["ARG"]
"experiments/**/*" = ["ALL"]
"reference_repos/**/*" = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "experiments/",
    "reference_repos/",
    "tests/unit/cli/test_train.py",  # Legacy CLI tests (deprecated)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "-ra",
    "--strict-markers",
]
markers = [
    "e2e: End-to-end tests (expensive, run on schedule)",
    "slow: Slow tests (>30s, run on schedule)",
    "unit: Fast unit tests (run on every PR)",
    "integration: Integration tests (run on every PR)",
    "legacy: Legacy tests for backward compatibility (optional in CI)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    "experiments/*",
    "reference_repos/*",
    "**/__pycache__/*",
    ".venv/*",
    "**/conftest.py",
]
branch = true

[tool.coverage.report]
precision = 2
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[dependency-groups]
dev = [
    "openpyxl>=3.1.5",
    "types-pyyaml>=6.0.12.20250915",
]
